# cmake-hello-world

./: CMakeLists.txt
scripts/: build.sh  build_dash.sh
